<resources>
    <string name="app_name">SportsBuddy</string>
    <string name="tab_text_1">home</string>
    <string name="tab_text_2">find games</string>
    <string name="tab_text_3">create games</string>
    <string name="tab_text_4">created games</string>
    <string name="tab_text_5">history</string>
    <string name="tab_text_6">settings</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="todo">TODO</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_emailorID">Email/UserID</string>
    <string name="prompt_username">User Name</string>
    <string name="prompt_ID">User ID</string>
    <string name="prompt_phoneno">Mobile Number</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_passwordagain">Enter Password Again</string>
    <string name="prompt_gender">Gender</string>

    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_signin">Log In</string>
    <string name="action_newuser">Sign Up</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string-array name="genderlist">
        <item>Gender</item>
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <string name="pname">Player Name</string>
    <string name="pID">Player ID</string>
    <string name="pstatus">Status</string>
    <string name="admin">Admin</string>
    <string name="pinfo">Player Information</string>
    <string-array name="playerlist">
        <item>Choose Player</item>
        <item>Player 1</item>
        <item>Player 2</item>
        <item>Player 3</item>
        <item>Player 4</item>
    </string-array>

    <string-array name="teamlist">
        <item>Choose Team</item>
        <item>Team 1</item>
        <item>Team 2</item>
        <item>Team 3</item>
        <item>Team 4</item>
    </string-array>
    <string name="changeno">Change Mobile Number</string>
    <string name="changepwd">Change Password</string>
    <string name="addphoto">Add Photo</string>
    <string name="oldpwd">Old Password</string>
    <string name="changename">Change Name</string>
    <string name="changeinname">New User Name</string>

    <string name="newpwd">New Password</string>
    <string name="save">Make Changes</string>

    <string name="newpwdagain">Enter New Password Again</string>
    <string name="newno">Enter New Mobile Number </string>

    <string name="savechanges">Save Changes</string>
</resources>
